package Strategy;

public interface Activity {
    public void doingThings();
}
