package Strategy;

public class Doing_Prak implements Activity {
    @Override
    public void doingThings(){
        System.out.println("Делаю практики");
    }
}
