package Strategy;

public class Party implements Activity{
    @Override
    public void doingThings(){
        System.out.println("Встреча с друзьями");
    }
}
