package Strategy;

public class Skate implements Activity {
    @Override
    public void doingThings(){
        System.out.println("Катаюсь на скейте");
    }
}
