package Strategy;

public class Sleeping implements Activity {
    @Override
    public void doingThings(){
        System.out.println("Отсыпаюсь");
    }
}
