package Strategy;

public class Studying_at_RTUMIREA implements Activity{
    @Override
    public void doingThings(){
        System.out.println("Учеба в лучшем вузе страны");
    }
}
